--- a/Resume.html
+++ b/Resume.html
@@ -49,6 +49,8 @@
         <li>Agile</li>
         <li>GTD</li>
         <li>Teamwork</li>
+        <li>Teamwork</li>
+        <li>Teamwork</li>
       </div>
       <br />
       <font color="blue" size="5"><footer>Vladi Verb 2020</footer></font>
