--- a/Resume.html
+++ b/Resume.html
@@ -12,7 +12,7 @@
     </center>
 
     <div>
-      <img src="https://i.postimg.cc/K8qrCRNW/1.jpg" alt="" /><br />
+      <img src="https://i.postimg.cc/K8qrCRNW/1.jpg" alt="FACT" /><br />
       <b>Дата рождения:</b> 12.06.1992<br />
       <b>Телефон:</b> +38(063) 944-99-25 <br />
       <b>E-mail:</b> vladiverbitsky@gmail.com <br />
