--- a/Resume.html
+++ b/Resume.html
@@ -8,7 +8,7 @@
   <body>
     <center>
       <h1>Резюме</h1>
-      <h2>Вербицкий Владислав Валериевич</h2>123
+      <h2>Вербицкий Владислав Валериевич</h2>
     </center>
 
     <div>
