--- a/Index.html
+++ b/Index.html
@@ -1,57 +1,202 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Резюме</title>
+    <title>Verb</title>
+    <link rel="stylesheet" href="./css/style.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  <body>
-    <center>
-      <h1>Резюме</h1>
-      <h2>Вербицкий Владислав Валериевич</h2>
-    </center>
+  <body class="body">
+    <!-- Main container-->
+    <div class="wrapper">
+      <aside class="aside">
+        <img class="photo" src="./img/1.jpg" alt="My Photo" />
+        <!--Contact container-->
+        <div class="Contact-container">
+          <h3 class="contact-title">Contacts</h3>
+          <div>
+            <span class="contact-link-title">C:</span>
+            <a class="contact-link" href="tel:+380639449925">+380639449925</a>
+          </div>
+          <div>
+            <span class="contact-link-title">E:</span>
+            <a class="contact-link" href="mailto:vladislavverbitsky@gmail.com"
+              >vladiverb@gmail.com</a
+            >
+          </div>
+          <div>
+            <span class="contact-link-title2">I:</span>
+            <a
+              class="contact-link2"
+              href="https://www.instagram.com/vladi_verb/"
+              target="blank"
+              >Instagram</a
+            >
+          </div>
+        </div>
+        <!--Tech skills container-->
+        <div class="tech-skill-container">
+          <h3 class="tech-skills-title">Tech skills</h3>
+          <ul>
+            <li class="tech-skills-item">
+              <span class="tech-skills-text">CSS3</span>
+            </li>
+            <li class="tech-skills-item">
+              <span class="tech-skills-text">HTML</span>
+            </li>
+            <li class="tech-skills-item">
+              <span class="tech-skills-text">GIT</span>
+            </li>
+            <li class="tech-skills-item">
+              <span class="tech-skills-text">WebPack</span>
+            </li>
+            <li class="tech-skills-item">
+              <span class="tech-skills-text">JavaScript</span>
+            </li>
+            <li class="tech-skills-item">
+              <span class="tech-skills-text">React.js</span>
+            </li>
+            <li class="tech-skills-item">
+              <span class="tech-skills-text">Node.js</span>
+            </li>
+          </ul>
+        </div>
+        <!--Soft skills container-->
+        <div class="soft-skills-container">
+          <h3 class="soft-skills-title">Soft skills</h3>
+          <ul>
+            <li class="soft-skills-item">
+              <span class="soft-skills-text">Scrum</span>
+            </li>
+            <li class="soft-skills-item">
+              <span class="soft-skills-text">Agile</span>
+            </li>
+            <li class="soft-skills-item">
+              <span class="soft-skills-text">GTD</span>
+            </li>
+            <li class="soft-skills-item">
+              <span class="soft-skills-text">Teamwork</span>
+            </li>
+          </ul>
+        </div>
+      </aside>
 
-    <div>
-      <img src="https://i.postimg.cc/K8qrCRNW/1.jpg" alt="FACT" /><br />
-      <b>Дата рождения:</b> 12.06.1992<br />
-      <b>Телефон:</b> +38(063) 944-99-25 <br />
-      <b>E-mail:</b> vladiverbitsky@gmail.com <br />
-      <b>Прописка :</b> Украина Одесская обл. г.Черноморск ул.Первого Мая. 4
-      кв.8 А<br />
+      <!-- About me container-->
+      <div class="about-me">
+        <div class="info-container">
+          <!--About me main info-->
+          <h2 class="profession">Front-End Developer</h2>
+          <h1 class="name">Вербицкий Владислав Валериевич</h1>
+        </div>
 
-      <b>Образование:</b>
+        <!--Projects container-->
+        <div class="projects-container">
+          <h3 class="about-me-title">Projects</h3>
+          <ol>
+            <li class="projects-items">
+              <a class="projects-link" href="https://lovecamp.goit.ua/">
+                https://lovecamp.goit.ua/</a
+              >
+              <span class="dots">...........................</span>
+              <span
+                ><b>[</b><span class="tech-name">HTML5, CSS3 </span
+                ><b>]</b></span
+              >
+            </li>
+            <li class="projects-items">
+              <a class="projects-link" href="https://cryptohub.goit.ua/">
+                https://cryptohub.goit.ua/</a
+              >
+              <span class="dots">..........................</span>
+              <span
+                ><b>[</b><span class="tech-name">JavaScript</span><b>]</b></span
+              >
+            </li>
+            <li class="projects-items">
+              <a class="projects-link" href=" https://kidslike.goit.co.ua/">
+                https://kidslike.goit.co.ua/</a
+              >
+              <span class="dots">.........................</span>
+              <span
+                ><b>[</b><span class="tech-name">React.js, Node.js</span
+                ><b>]</b></span
+              >
+            </li>
+          </ol>
+        </div>
 
-      Высшее Начало обучения 2010 Окончание 2015 Учебное заведение
-      <br />Одесский национальный политехнический университет Специальность
-      Документоведение и <br />информационная деятельность.
+        <!--Work experience-->
+        <div>
+          <h3 class="about-me-title">Work Experience</h3>
 
-      <br />
-      <br />
-    </div>
-    <center>
-      <b>Опыт работы :</b>
-      <li>2014 Страховой агент в компании КНЯЖА.</li>
-      <li>
-        2015-2018 Модератор и агент технической поддержки на игровом проекте.
-      </li>
-      <b>Tech skills:</b>
-      <li>CSS3</li>
-      <li>HTML</li>
-      <li>GIT</li>
-      <li>WebPack</li>
-      <li>JavaScript</li>
-      <li>React.js</li>
-      <li>Node</li>
-      <br />
-      <div>
-        <b>Sofr Skills:</b>
-        <li>Scrum</li>
-        <li>Agile</li>
-        <li>GTD</li>
-        <li>Teamwork</li>
+          <!--Company 1-->
+          <div>
+            <h4 class="profes-title">
+              Front-End Developer <span class="prof-comp">Freelance</span>
+            </h4>
+            <span class="prof-time">
+              September 2019 - up to now | Ukraine
+            </span>
+
+            <ul class="prof-dut-item">
+              <li>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua.
+              </li>
+              <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
+              <li>Risus commodo viverra maecenas.</li>
+              <li>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod.
+              </li>
+            </ul>
+          </div>
+          <!--Company 2-->
+          <div>
+            <h4 class="profes-title">
+              Manager<span class="prof-comp"> Roga & Kopyta NEW</span>
+            </h4>
+            <span class="prof-time"> March 2015 - October 2018 | Ukraine </span>
+
+            <ul class="prof-dut-item">
+              <li>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod labore et dolore magna aliqua.
+              </li>
+              <li>Quis ipsum suspendisse ultrices gravida.</li>
+              <li>Risus commodo viverra maecenas.</li>
+            </ul>
+          </div>
+          <!--Company 3-->
+          <div>
+            <h4 class="profes-title">
+              Manager<span class="prof-comp"> Roga & Kopyta LLC</span>
+            </h4>
+            <span class="prof-time">September 2019 - up to now | Ukraine </span>
+
+            <ul class="prof-utis">
+              <li class="prof-dut-item">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+              </li>
+              <li class="prof-dut-item">
+                Quis ipsum suspendisse ultrices gravida.
+              </li>
+              <li class="prof-dut-item">Risus commodo viverra maecenas.</li>
+            </ul>
+          </div>
+          <!--Education-->
+          <div>
+            <h4 class="about-me-title">Education</h4>
+            <h4 class="ed-name">Odessa National Polytechnic University</h4>
+            <h5 class="un-name">Information Activity</h5>
+            <span class="prof-time">Septermber 2010 - June 2015</span>
+          </div>
+        </div>
       </div>
-      <br />
-      <font color="blue" size="5"><footer>Vladi Verb 2020</footer></font>
-    </center>
+    </div>
   </body>
 </html>
