--- a/Index.html
+++ b/Index.html
@@ -194,6 +194,10 @@
             <h5 class="un-name">Information Activity</h5>
             <span class="prof-time">Septermber 2010 - June 2015</span>
           </div>
+        </div><br>
+        <div class="about-me-title" ><a target="_blank" href="https://factvlad.github.io/mary/index.html">Marina Resume</a><br>
+          <a target="_blank" href="https://factvlad.github.io/shopping/index.html">Shopping List</a>
+
         </div>
       </div>
     </div>
