--- a/index.html
+++ b/index.html
@@ -194,10 +194,7 @@
             <h5 class="un-name">Information Activity</h5>
             <span class="prof-time">Septermber 2010 - June 2015</span>
           </div>
-        </div><br>
-        <div class="about-me-title" ><a target="_blank" href="https://factvlad.github.io/mary/">Marina Resume</a><br>
-          <a target="_blank" href="https://factvlad.github.io/shopping/">Shopping List</a>
-
+        </div>
         </div>
       </div>
     </div>
