--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           <h3 class="about-me-title">Projects</h3>
           <ol>
             <li class="projects-items">
-              <a class="projects-link" href="https://lovecamp.goit.ua/">
+              <a class="projects-link" target="blank" href="https://lovecamp.goit.ua/">
                 https://lovecamp.goit.ua/</a
               >
               <span class="dots">...........................</span>
@@ -107,7 +107,7 @@
               >
             </li>
             <li class="projects-items">
-              <a class="projects-link" href="https://cryptohub.goit.ua/">
+              <a class="projects-link" target="blank"  href="https://cryptohub.goit.ua/">
                 https://cryptohub.goit.ua/</a
               >
               <span class="dots">..........................</span>
