--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Verb</title>
+  <title>Vladi Verb Summary</title>
+  <link rel="shortcut icon"
+    href="https://cdn.dribbble.com/users/108183/screenshots/3302026/app-icon-irregular-verbs-volorf.png"
+    type="image/x-icon">
   <link rel="stylesheet" href="./css/style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet" />
 </head>
@@ -58,7 +61,7 @@
         </ul>
       </div>
       <!--Soft skills container-->
-      <div class="soft-skills-container">
+      <!-- <div class="soft-skills-container">
         <h3 class="soft-skills-title">Soft skills</h3>
         <ul>
           <li class="soft-skills-item">
@@ -74,7 +77,7 @@
             <span class="soft-skills-text">Teamwork</span>
           </li>
         </ul>
-      </div>
+      </div> -->
     </aside>
 
     <!-- About me container-->
