--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <div class="about-me">
       <div class="info-container">
         <!--About me main info-->
-        <h1 class="name">Вербицкий Владислав Валериевич</h1>
+        <h1 class="name">Front-end Junior</h1>
       </div>
 
       <!--Projects container-->
