--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <div class="about-me">
       <div class="info-container">
         <!--About me main info-->
-        <h1 class="name">Front-end Junior</h1>
+        <h1 class="name">Junior Frontend Developer</h1>
       </div>
 
       <!--Projects container-->
@@ -177,7 +177,7 @@
           <h4 class="ed-name">Odessa National Polytechnic University</h4>
           <h5 class="un-name"> Beetroot Academy</h5>
           <h5 class="un-name">ItGid. Курсы Лущенко Александра</h5>
-          <span class="prof-time">Septermber 2010 - June 2015</span>
+          <!-- <span class="prof-time">Septermber 2010 - June 2015</span> -->
         </div>
       </div>
     </div>
