--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         <h3 class="about-me-title">Work Experience</h3>
 
         <!--Company 1-->
-        <div>
+        <!-- <div>
           <h4 class="profes-title">
             Front-End Developer <span class="prof-comp">Freelance</span>
           </h4>
@@ -137,9 +137,9 @@
               eiusmod.
             </li>
           </ul>
-        </div>
+        </div> -->
         <!--Company 2-->
-        <div>
+        <!-- <div>
           <h4 class="profes-title">
             Manager<span class="prof-comp"> Roga & Kopyta NEW</span>
           </h4>
@@ -153,9 +153,9 @@
             <li>Quis ipsum suspendisse ultrices gravida.</li>
             <li>Risus commodo viverra maecenas.</li>
           </ul>
-        </div>
+        </div> -->
         <!--Company 3-->
-        <div>
+        <!-- <div>
           <h4 class="profes-title">
             Manager<span class="prof-comp"> Roga & Kopyta LLC</span>
           </h4>
@@ -170,7 +170,7 @@
             </li>
             <li class="prof-dut-item">Risus commodo viverra maecenas.</li>
           </ul>
-        </div>
+        </div> -->
         <!--Education-->
         <div>
           <h4 class="about-me-title">Education</h4>
