--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <img class="photo" src="./img/1.jpg" alt="My Photo" />
       <!--Contact container-->
       <div class="Contact-container">
-        <h3 class="contact-title">Contacts123</h3>
+        <h3 class="contact-title">Contacts</h3>
         <div>
           <span class="contact-link-title">C:</span>
           <a class="contact-link" href="tel:+380639449925">+380639449925</a>
