--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="shortcut icon"
     href="https://cdn.dribbble.com/users/108183/screenshots/3302026/app-icon-irregular-verbs-volorf.png"
     type="image/x-icon">
-  <link rel="stylesheet" href="./css/style.css" />
+  <link rel="stylesheet" href="css/style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet" />
 </head>
 
@@ -29,8 +29,8 @@
           <a class="contact-link" href="mailto:vladislavverbitsky@gmail.com">vladiverb@gmail.com</a>
         </div>
         <div>
-          <span class="contact-link-title2">I:</span>
-          <a class="contact-link2" href="https://www.instagram.com/vladi_verb/" target="blank">Instagram</a>
+          <span class="contact-link-title2">G:</span>
+          <a class="contact-link2" href="https://github.com/factvlad" target="blank">GitHub</a>
         </div>
       </div>
       <!--Tech skills container-->
